	(CygbuildIsDirMatch): New.
	(CygbuildInstallExtraManual): Support CYGWIN-PATCHES/man directory.
	(CygbuildInstallPostinstallPartEtc): Change variable `dest'
	to `destdir'. Use command line arg `dest'.
	(CygbuildPostinstallWriteMain): Assign command line argument
	$1 to variable dest.
	(CygbuildCommandMain): Correct -d option without numeric argument.

2009-02-04  Jari Aalto  <jari.aalto@cante.net>

	* bin/template/cygwin-announce.mail.tmp (License): Add Copyright
	line.

	* bin/template/install-after.sh.tmp
	(top level): Correct argument order in synapsis.
	(main): Fix positional arguments.

	* bin/cygbuild.sh (CygbuildCmdInstallMain): Fix call message about
	calling $scriptAfter.

2009-02-02  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildFileReadOptionsMaybe): Improve
	external option read message.

2008-12-05  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildCommandMain): Suggest 'util-linux' package
	of 'getopt' is not available.

2008-11-05  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallFixEtcdirInstall): Rewrite
	.inst/etc handling for preremove and postinstall.

2008-11-04  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES): Document
	new file CYGWIN-PATCHES/mandir.

	* bin/cygbuild.sh: (CygbuildPatchApplyMaybe): Check
	content of done-patch.tmp in more detail. The old cygbuild
	versions did not record PATH names. Offer support for
	backward compatibility in case of 'unpatch' so that that
	both 'path/file.patch' and 'file.patch' records are removed.
	(CygbuildIsCplusplusPackage): Add 'g++' check for Makefiles.
	(CygbuildPatchApplyRun): Signal 'Unpatching' during
	--reverse patch.
	(CygbuildDefineGlobalMain): New EXTRA_MANDIR_FILE 'mandir'.
	(CygbuildInstallExtraManual): Add support for reading manual pages
	from subdirectory CYGWIN-PATCHES/manpages.
	(CygbuildDefineGlobalMain): Make SCRIPT_BUILD_CYGFILE and
	SCRIPT_CONFIGURE_CYGFILE absolute.